--- a/css/custom.css
+++ b/css/custom.css
@@ -1,36 +1,40 @@
 @font-face {
     font-family: ProximaNovaRegular;
-    src: url(fonts/ProximaNova-Reg.otf);
+    src: url(css/fonts/ProximaNova-Reg.otf);
     font-weight: 400;
     font-style: normal    
 }
 
 @font-face {
     font-family: ProximaNovaLight;
-    src: url(fonts/ProximaNova-Light.otf);
+    src: url(css/fonts/ProximaNova-Light.otf);
     font-weight: 400;
     font-style: normal
 }
 
 @font-face {
     font-family: ProximaNovaBold;
-    src: url(fonts/ProximaNova-Bold.otf);
+    src: url(css/fonts/ProximaNova-Bold.otf);
     font-weight: 400;
     font-style: normal    
 }
 
 @font-face {
     font-family: ProximaNovaExCondTh;
-    src: url(fonts/proximanovaexcn-thin.otf);
+    src: url(css/fonts/proximanovaexcn-thin.otf);
     font-weight: 400;
     font-style: normal    
 }
 
 @font-face {
     font-family: ProximaNovaExCondBold;
-    src: url(fonts/proximanovaexcn-bold.otf);
+    src: url(css/fonts/proximanovaexcn-bold.otf);
     font-weight: 400;
     font-style: normal    
+}
+
+#notebook-container {
+    width: 100%;
 }
 
 /* Change code font */
